# roulettecoin-gpuminer

./: Makefile.am  README  configure.ac  cpu-miner.c  miner.h  roulette.c  roulette.cpp  roulette.h  sha2.c
kernel/: fugue.cl  roulettecoin.cl  sha2.cl
sphlib/: Makefile.am
